--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,4 +1,5 @@
 body{
+    background: #1e1f24;
     color: #333;
     text-align: center;
     font-family: Arial;
@@ -8,12 +9,17 @@ body{
 }
 
 #cabecera{
-    background: #33A;
+    background: url("../imagenes/dragon.png") 10px 10px;
     box-shadow: 0px 2px 20px 0px rgba(0,0,0,0.5);
     color: white;
     font-weight: bold;
     margin: 0;
-    padding: 0.5em;
+    padding: 0.5em 0 0.5em 2em;
+}
+
+#cabecera #logo{
+    width: 20px;
+    vertical-align: middle;
 }
 
 
@@ -33,4 +39,9 @@ body{
 
 #container h1{
     font-size: 20px;
+}
+
+#post{
+    background: white;
+    padding: 1em;
 }
